# calibre_mcp_server

./: .env.example  CHANGELOG.rst  README.md  glama.json  mcp.json  pyproject.toml  requirements.txt
src/calibre_mcp_server/: calibre_api.py  config.py  exceptions.py  server.py  validation.py
