[project]
name = "calibre_mcp_server"
version = "1.0.0"
description = "An MCP server for Calibre"
requires-python = ">=3.10"
dependencies = [
  "fastmcp==2.12.3",
  "pydantic==2.11.9",
  "python-dotenv==1.1.1",
]
authors = [
  { name = "Alberto Tudela", email = "ajtudela@gmail.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
keywords = ["calibre", "mcp", "server", "ebooks"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[project.scripts]
calibre_mcp_server = "calibre_mcp_server.__main__:main"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "fastmcp.*"
]
ignore_missing_imports = true

