[project]
name = "calibre-mcp-server"
version = "1.1.0"
description = "An MCP server for Calibre"
requires-python = ">=3.10"
dependencies = [
  "fastmcp==2.12.3",
  "pydantic==2.11.9",
  "python-dotenv==1.1.1",
]
authors = [
  { name = "Alberto Tudela", email = "ajtudela@gmail.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
keywords = ["calibre", "mcp", "server", "ebooks"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[project.scripts]
calibre_mcp_server = "calibre_mcp_server.server:main"

[tool.uv]
package = true
